--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   "author": "aayush lamichhane",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^7.0.0"
+    "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
+    "mammoth": "^1.5.1",
+    "method-override": "^3.0.0",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "pdfjs-dist": "^3.4.120",
+    "pdfreader": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
