--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT= 5001
-CONNECTION_STRING = mongodb+srv://admin:admin@applicationcluster.enq0pom.mongodb.net/application_backend?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://admin:admin@databasecluster.9ukhkfh.mongodb.net/myDatabase?retryWrites=true&w=majority
