--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "mammoth": "^1.5.1",
     "method-override": "^3.0.0",
+    "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "pdfjs-dist": "^3.4.120",
     "pdfreader": "^3.0.0"
   },
   "devDependencies": {
