--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -26,7 +27,9 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "pdfjs-dist": "^3.4.120",
-    "pdfreader": "^3.0.0"
+    "pdfkit": "^0.13.0",
+    "pdfreader": "^3.0.0",
+    "python-shell": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
